{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 36,
  "lineage": "8db0f17f-c6fc-7e19-ac16-5c3b6ae9da5a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:662921601207:vpc/vpc-0dc59802654a427d1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f846db6ab99e3533",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04a327f45b81346c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc59802654a427d1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-039013dd876b90a76",
            "owner_id": "662921601207",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-alb/7a2bdb69bd369e62",
            "arn_suffix": "app/shopping-cart-service-alb/7a2bdb69bd369e62",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "shopping-cart-service-alb-804918405.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-alb/7a2bdb69bd369e62",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shopping-cart-service-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-032667cae51921cdb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08eb5f74742d90755"
              },
              {
                "subnet_id": "subnet-0cdab1a835665d8aa"
              },
              {
                "subnet_id": "subnet-0f34c8990c4e3b8d9"
              },
              {
                "subnet_id": "subnet-0ff4ff1da3122fcd7"
              }
            ],
            "subnets": [
              "subnet-08eb5f74742d90755",
              "subnet-0cdab1a835665d8aa",
              "subnet-0f34c8990c4e3b8d9",
              "subnet-0ff4ff1da3122fcd7"
            ],
            "tags": {
              "Name": "shopping-cart-service-alb"
            },
            "tags_all": {
              "Name": "shopping-cart-service-alb"
            },
            "vpc_id": "vpc-0dc59802654a427d1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-alb/7a2bdb69bd369e62"
          },
          "dependencies": [
            "module.network.aws_security_group.this",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:listener/app/shopping-cart-service-alb/7a2bdb69bd369e62/d7b15081b6ac725a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:targetgroup/shopping-cart-service-tg/4b130cda7c68a4d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:662921601207:listener/app/shopping-cart-service-alb/7a2bdb69bd369e62/d7b15081b6ac725a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-alb/7a2bdb69bd369e62",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:listener/app/shopping-cart-service-alb/7a2bdb69bd369e62/d7b15081b6ac725a"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.network.aws_security_group.this",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:targetgroup/shopping-cart-service-tg/4b130cda7c68a4d7",
            "arn_suffix": "targetgroup/shopping-cart-service-tg/4b130cda7c68a4d7",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:662921601207:targetgroup/shopping-cart-service-tg/4b130cda7c68a4d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-alb/7a2bdb69bd369e62"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shopping-cart-service-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "shopping-cart-service-tg"
            },
            "tags_all": {
              "Name": "shopping-cart-service-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dc59802654a427d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:targetgroup/shopping-cart-service-tg/4b130cda7c68a4d7"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_dynamodb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-ddb-alb/e4ce4bd668b8a4e4",
            "arn_suffix": "app/shopping-cart-service-ddb-alb/e4ce4bd668b8a4e4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "shopping-cart-service-ddb-alb-1105742360.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-ddb-alb/e4ce4bd668b8a4e4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shopping-cart-service-ddb-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-032667cae51921cdb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08eb5f74742d90755"
              },
              {
                "subnet_id": "subnet-0cdab1a835665d8aa"
              },
              {
                "subnet_id": "subnet-0f34c8990c4e3b8d9"
              },
              {
                "subnet_id": "subnet-0ff4ff1da3122fcd7"
              }
            ],
            "subnets": [
              "subnet-08eb5f74742d90755",
              "subnet-0cdab1a835665d8aa",
              "subnet-0f34c8990c4e3b8d9",
              "subnet-0ff4ff1da3122fcd7"
            ],
            "tags": {
              "Name": "shopping-cart-service-ddb-alb"
            },
            "tags_all": {
              "Name": "shopping-cart-service-ddb-alb"
            },
            "vpc_id": "vpc-0dc59802654a427d1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-ddb-alb/e4ce4bd668b8a4e4"
          },
          "dependencies": [
            "module.network.aws_security_group.this",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_dynamodb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:listener/app/shopping-cart-service-ddb-alb/e4ce4bd668b8a4e4/c05665f9634cb2af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:targetgroup/shopping-cart-service-ddb-tg/ca64eaa67c3e4f21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:662921601207:listener/app/shopping-cart-service-ddb-alb/e4ce4bd668b8a4e4/c05665f9634cb2af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-ddb-alb/e4ce4bd668b8a4e4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:listener/app/shopping-cart-service-ddb-alb/e4ce4bd668b8a4e4/c05665f9634cb2af"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb_dynamodb.aws_lb.this",
            "module.alb_dynamodb.aws_lb_target_group.this",
            "module.network.aws_security_group.this",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_dynamodb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:targetgroup/shopping-cart-service-ddb-tg/ca64eaa67c3e4f21",
            "arn_suffix": "targetgroup/shopping-cart-service-ddb-tg/ca64eaa67c3e4f21",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:662921601207:targetgroup/shopping-cart-service-ddb-tg/ca64eaa67c3e4f21",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:662921601207:loadbalancer/app/shopping-cart-service-ddb-alb/e4ce4bd668b8a4e4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shopping-cart-service-ddb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "shopping-cart-service-ddb-tg"
            },
            "tags_all": {
              "Name": "shopping-cart-service-ddb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dc59802654a427d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:662921601207:targetgroup/shopping-cart-service-ddb-tg/ca64eaa67c3e4f21"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:662921601207:vpc/vpc-0dc59802654a427d1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f846db6ab99e3533",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04a327f45b81346c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc59802654a427d1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-039013dd876b90a76",
            "owner_id": "662921601207",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:662921601207:security-group/sg-032667cae51921cdb",
            "description": "Allow inbound on 80 and 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032667cae51921cdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic to ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic to containers",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "shopping-cart-service-sg",
            "name_prefix": "",
            "owner_id": "662921601207",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc59802654a427d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:662921601207:security-group/sg-044e17c4e21a514fa",
            "description": "Security group for RDS MySQL instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044e17c4e21a514fa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032667cae51921cdb"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "shopping-cart-service-rds-sg",
            "name_prefix": "",
            "owner_id": "662921601207",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopping-cart-service-rds-sg"
            },
            "tags_all": {
              "Name": "shopping-cart-service-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc59802654a427d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.network.aws_security_group.this",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}